--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>Lisn - Share music with friends in real time</title>
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -27,46 +27,55 @@
     <script>
 
       $( function(){
-        a=1;
-
-        function myLoop(d){
+        a=5;
+        var colors = {
+          "purple":"#6967CE",
+          "yellow":"#FFB926",
+          "green":"#3BE9B0",
+          "red":"#FD636A"
+        };
+        function myLoop(messageIndex){
 
 
             setTimeout(function(){
-                      if(d<10){
-
-                          p=$('#msg'+d).css("height");
-                          m="-="+p;
-                          $( ".message" ).animate({ "top": m },100);
-                          if (d==3){
-                          $('#lisn').css("background","#FFB926");
-
-                          $('.carouse ').css("background","-webkit-linear-gradient(transparent,#FFB926)");
-                          $('#msgboard').css("background","#FFB926");
-                          $('#msgboard').css("border-top","none");
-                          $('#imgright img').attr('src','images/faces/yel.png');
+                      if(messageIndex<16){
+                          topMessageHeight=$('#msg'+messageIndex).outerHeight(true);
+                          console.log("Message height is " + topMessageHeight + " for index " + messageIndex);
+                          offset="-="+topMessageHeight;
+                          // $( ".message" ).animate({ "top": offset },200);
+                          $('.message').css('top',offset);
+                          // $( "#msgboard" ).animate({});
+                          if (messageIndex==9){
+                            $( ".carouse-inner" ).animate({ "margin-left": "-=200px" },200);
+                            $('#lisn').css("background",colors["yellow"]);
+                            $('.carouse ').css("background","linear-gradient(transparent,#FFB926)");
+                            $('#msgboard').css("background",colors["yellow"]);
+                            $('#msgboard').css("border-top","none");
+                            $('#imgright img').attr('src','images/faces/yel.png');
                             $('#imgright img').attr('width','120px');
                           }
-                          else if (d==6){
-                          $('#lisn').css("background","#3BE9B0");
+                          else if (messageIndex==12){
+                            $( ".carouse-inner" ).animate({ "margin-left": "-=200px" },200);
+                            $('#lisn').css("background",colors["green"]);
 
-                          $('.carouse').css("background","-webkit-linear-gradient(transparent,#3BE9B0)");
-                          $('#msgboard').css("background","#3BE9B0");
-                          $('#msgboard').css("border-top","none");
-                          $('#imgright img').attr('src','images/faces/do2.png');
+                            $('.carouse').css("background","linear-gradient(transparent,#3BE9B0)");
+                            $('#msgboard').css("background",colors["green"]);
+                            $('#msgboard').css("border-top","none");
+                            $('#imgright img').attr('src','images/faces/do2.png');
                             $('#imgright img').attr('width','121px');
                           }
-                          else if (d==9){
-                          $('#lisn').css("background","#FD636A");
+                          else if (messageIndex==15){
+                            $( ".carouse-inner" ).animate({ "margin-left": "-=200px" },200);
+                            $('#lisn').css("background",colors["red"]);
 
-                          $('.carouse').css("background","-webkit-linear-gradient(transparent,#FD636A)");
-                          $('#msgboard').css("background","#FD636A");
-                          $('#msgboard').css("border-top","none");
-                          $('#imgright img').attr('src','images/carl.png');
+                            $('.carouse').css("background","linear-gradient(transparent,#FD636A)");
+                            $('#msgboard').css("background",colors["red"]);
+                            $('#msgboard').css("border-top","none");
+                            $('#imgright img').attr('src','images/carl.png');
                             $('#imgright img').attr('width','142px');
                           }
 
-                          myLoop(d+1);
+                          myLoop(messageIndex+1);
                         }
                       },2000);
                       }
@@ -161,40 +170,40 @@
 
           <div id="msgboard">
 
-              <div class="message ui-widget-content ui-corner-all"  id="msg1">
+              <div class="message ui-widget-content ui-corner-all received"  id="msg1">
                 whatsup, have you heard this yet?
                 </div>
 
-              <div class="message ui-widget-content ui-corner-all"  id="msg2">
+              <div class="message ui-widget-content ui-corner-all received"  id="msg2">
                   came out yesterday    </div>
 
-              <div class="message ui-widget-content ui-corner-all"  id="msg3">
+              <div class="message ui-widget-content ui-corner-all sent"  id="msg3">
                   love me some honne!  </div>
 
-              <div class="message ui-widget-content ui-corner-all"  id="msg4">
+              <div class="message ui-widget-content ui-corner-all received"  id="msg4">
                   they always remind me of you
                             smiley face    </div>
 
-              <div class="message ui-widget-content ui-corner-all"  id="msg5">
+              <div class="message ui-widget-content ui-corner-all sent"  id="msg5">
                   this is my favourite gambino track   </div>
 
 
-              <div class="message ui-widget-content ui-corner-all"  id="msg6">
+              <div class="message ui-widget-content ui-corner-all sent"  id="msg6">
                   I love this track. CAMP. The whole album is pretty dope    </div>
-              <div class="message ui-widget-content ui-corner-all"  id="msg7">
+              <div class="message ui-widget-content ui-corner-all sent"  id="msg7">
                   Have you seen his TV show though    </div>
-              <div class="message ui-widget-content ui-corner-all"  id="msg8">
+              <div class="message ui-widget-content ui-corner-all sent"  id="msg8">
                   Community? Yeah its hilarious haha   </div>
 
-              <div class="message ui-widget-content ui-corner-all"  id="msg9">
+              <div class="message ui-widget-content ui-corner-all received"  id="msg9">
               i’ve been playing this on repeat for the last three days  teeth face   </div>
 
-            <div class="message ui-widget-content ui-corner-all"  id="msg10">
+            <div class="message ui-widget-content ui-corner-all received"  id="msg10">
               #jaar kills it again    </div>
-            <div class="message ui-widget-content ui-corner-all"  id="msg11">
+            <div class="message ui-widget-content ui-corner-all received"  id="msg11">
             his beats are so tribal
              </div>
-            <div class="message ui-widget-content ui-corner-all"  id="msg12">
+            <div class="message ui-widget-content ui-corner-all sent"  id="msg12">
               I’m gonna make everyone Lisn to this  </div>
 
 
