Lisn Title changed from Image to text

--- a/index.html
+++ b/index.html
@@ -87,13 +87,7 @@
 
 
     </script>
-    <script>
-     $('#mute').click( function(){
-      $('#audioname').pause();
 
-    });
-
-    </script>
     <script>
     $(function() {
 
@@ -109,12 +103,12 @@
     </script>
   </head>
   <body id="lisn">
-    <audio id="audioname" src="music/good_enough.mp3" autoplay="autoplay"></audio>
+
       <div class="container">
 
         <div class="row">
           <div class="col-lg-12 col-xs-12">
-              <center>    <img src="images/lisn.png" class="img-responsive" width="413px" style="margin-top:40px"  > </center>
+              <center style="color:white; font-size:42px;font-weight:100"> <h1 style="font-size:72px; font-weight:bold;">Lisn</h1> Listen to music together </center>
           </div>
         </div>
 
