CHANGING THE COLOR OF THE YELLOW CONSTANT

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         a=5;
         var colors = {
           "purple":"#6967CE",
-          "yellow":"#FFB926",
+          "yellow":"#B19212",
           "green":"#3BE9B0",
           "red":"#FD636A"
         };
