3BE9B0 TO 55BA69
COLOR CHANGE

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         var colors = {
           "purple":"#6967CE",
           "yellow":"#B19212",
-          "green":"#3BE9B0",
+          "green":"#55BA69",
           "red":"#FD636A"
         };
         function myLoop(messageIndex){
