--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Lisn - Share music with friends in real time</title>
@@ -30,7 +30,7 @@
         a=5;
         var colors = {
           "purple":"#6967CE",
-          "yellow":"#E57124",
+          "yellow":"#B19212",
           "green":"#55BA69",
           "red":"#FD636A"
         };
