--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         a=5;
         var colors = {
           "purple":"#6967CE",
-          "yellow":"#CCA714",
+          "yellow":"#DA9C16",
           "green":"#55BA69",
           "red":"#FD636A"
         };
