--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
         <div class="row">
           <div class="col-lg-12 col-xs-12">
-              <center style="color:white; font-family:solomon_sans_lightregular; font-size:36px;"> <h1 style="font-size:45px; font-family:solomon_sans_boldbold; font-weight:800; margin-bottom:-10px;">Lisn</h1> Listen to music together </center>
+              <center> <h1 id="lisnTitle">Lisn</h1> <h2 id="Tagline">Listen to music together</h2> </center>
           </div>
         </div>
 
