4th image changed

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                             $('.carouse').css("background","linear-gradient(transparent,#FD636A)");
                             $('#msgboard').css("background",colors["red"]);
                             $('#msgboard').css("border-top","none");
-                            $('#imgright img').attr('src','images/carl.png');
-                            $('#imgright img').attr('width','142px');
+                            $('#imgright img').attr('src','images/lady.png');
+                            $('#imgright img').attr('width','183px');
                           }
 
                           myLoop(messageIndex+1);
