introducing images on the left and right

--- a/index.html
+++ b/index.html
@@ -52,8 +52,11 @@
                             $('.carouse ').css("background","linear-gradient(transparent,#FFB926)");
                             $('#msgboard').css("background",colors["yellow"]);
                             $('#msgboard').css("border-top","none");
-                            $('#imgright img').attr('src','images/faces/yel.png');
-                            $('#imgright img').attr('width','120px');
+                            $('#imgright img').attr('src','images/homie_yellow.png');
+                            $('#imgright img').attr('width','170px');
+                            $('#imgleft img').attr('src','images/guy_yellow.png');
+                            $('#imgleft img').attr('width','167px');
+                            $('#imgleft').css("margin-left","-106px");
                           }
                           else if (messageIndex==11){
                             $( ".carouse-inner" ).animate({ "margin-left": "-=200px" },200);
@@ -62,8 +65,11 @@
                             $('.carouse').css("background","linear-gradient(transparent,#3BE9B0)");
                             $('#msgboard').css("background",colors["green"]);
                             $('#msgboard').css("border-top","none");
-                            $('#imgright img').attr('src','images/faces/do2.png');
-                            $('#imgright img').attr('width','121px');
+                            $('#imgright img').attr('src','images/curly_green.png');
+                            $('#imgright img').attr('width','170px');
+                            $('#imgleft img').attr('src','images/guy_green.png');
+                            $('#imgleft img').attr('width','169px');
+                            $('#imgleft').css("margin-left","-104px");
                           }
                           else if (messageIndex==14){
                             $( ".carouse-inner" ).animate({ "margin-left": "-=200px" },200);
@@ -72,8 +78,11 @@
                             $('.carouse').css("background","linear-gradient(transparent,#FD636A)");
                             $('#msgboard').css("background",colors["red"]);
                             $('#msgboard').css("border-top","none");
-                            $('#imgright img').attr('src','images/lady.png');
-                            $('#imgright img').attr('width','183px');
+                            $('#imgright img').attr('src','images/lady_red.png');
+                            $('#imgright img').attr('width','168px');
+                            $('#imgleft img').attr('src','images/guy_red.png');
+                            $('#imgleft img').attr('width','169px');
+                            $('#imgleft').css("margin-left","-104px");
                           }
 
                           myLoop(messageIndex+1);
@@ -85,8 +94,11 @@
                           $('.carouse ').css("background","linear-gradient(transparent,#6967CE)");
                           $('#msgboard').css("background",colors["purple"]);
                           $('#msgboard').css("border-top","none");
-                          $('#imgright img').attr('src','images/christian@2xy.png');
-                          $('#imgright img').attr('width','273');
+                          $('#imgright img').attr('src','images/ruff_purple.png');
+                          $('#imgright img').attr('width','170px');
+                          $('#imgleft img').attr('src','images/guy_purple.png');
+                          $('#imgleft img').attr('width','170px');
+                          $('#imgleft').css("margin-left","-103px");
                         myLoop(5);
 
                         }
@@ -139,11 +151,11 @@
           <div class="col-lg-4 col-sm-4 col-md-4 col-xs-12">
             <div id="img-contain">
             <div id="imgleft">
-              <img src="images/christian@2x1.png"  class="img-responsive" width="273px">
+              <img src="images/guy_purple.png"  class="img-responsive" width="170px">
             </div>
 
             <div id="imgright">
-              <img src="images/christian@2xy.png" width="273px" >
+              <img src="images/ruff_purple.png" width="170px" >
             </div>
             </div>
               <div class="bg" id="iphone">
