images alignemnent and sizing settled

--- a/index.html
+++ b/index.html
@@ -49,27 +49,27 @@
                           if (messageIndex==8){
                             $( ".carouse-inner" ).animate({ "margin-left": "-=200px" },200);
                             $('#lisn').css("background",colors["yellow"]);
-                            $('.carouse ').css("background","linear-gradient(transparent,#FFB926)");
+                            $('.carouse ').css("background","linear-gradient(transparent,#DA9C16)");
                             $('#msgboard').css("background",colors["yellow"]);
                             $('#msgboard').css("border-top","none");
                             $('#imgright img').attr('src','images/homie_yellow.png');
                             $('#imgright img').attr('width','170px');
                             $('#imgleft img').attr('src','images/guy_yellow.png');
-                            $('#imgleft img').attr('width','167px');
-                            $('#imgleft').css("margin-left","-106px");
+                            $('#imgleft img').attr('width','170px');
+                            $('#imgleft').css("margin-left","-97px");
                           }
                           else if (messageIndex==11){
                             $( ".carouse-inner" ).animate({ "margin-left": "-=200px" },200);
                             $('#lisn').css("background",colors["green"]);
 
-                            $('.carouse').css("background","linear-gradient(transparent,#3BE9B0)");
+                            $('.carouse').css("background","linear-gradient(transparent,#55BA69)");
                             $('#msgboard').css("background",colors["green"]);
                             $('#msgboard').css("border-top","none");
                             $('#imgright img').attr('src','images/curly_green.png');
                             $('#imgright img').attr('width','170px');
                             $('#imgleft img').attr('src','images/guy_green.png');
-                            $('#imgleft img').attr('width','169px');
-                            $('#imgleft').css("margin-left","-104px");
+                            $('#imgleft img').attr('width','170px');
+                            $('#imgleft').css("margin-left","-97px");
                           }
                           else if (messageIndex==14){
                             $( ".carouse-inner" ).animate({ "margin-left": "-=200px" },200);
@@ -81,8 +81,8 @@
                             $('#imgright img').attr('src','images/lady_red.png');
                             $('#imgright img').attr('width','168px');
                             $('#imgleft img').attr('src','images/guy_red.png');
-                            $('#imgleft img').attr('width','169px');
-                            $('#imgleft').css("margin-left","-104px");
+                            $('#imgleft img').attr('width','170px');
+                            $('#imgleft').css("margin-left","-97px");
                           }
 
                           myLoop(messageIndex+1);
@@ -97,8 +97,8 @@
                           $('#imgright img').attr('src','images/ruff_purple.png');
                           $('#imgright img').attr('width','170px');
                           $('#imgleft img').attr('src','images/guy_purple.png');
-                          $('#imgleft img').attr('width','170px');
-                          $('#imgleft').css("margin-left","-103px");
+                          $('#imgleft img').attr('width','185px');
+                          $('#imgleft').css("margin-left","-112px");
                         myLoop(5);
 
                         }
@@ -151,7 +151,7 @@
           <div class="col-lg-4 col-sm-4 col-md-4 col-xs-12">
             <div id="img-contain">
             <div id="imgleft">
-              <img src="images/guy_purple.png"  class="img-responsive" width="170px">
+              <img src="images/guy_purple.png"  class="img-responsive" width="185px">
             </div>
 
             <div id="imgright">
