--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
 
-    <script>
+   <script>
 
       $( function(){
         a=5;
@@ -47,58 +47,79 @@
                           $('.message').css('top',offset);
                           // $( "#msgboard" ).animate({});
                           if (messageIndex==8){
+                            $('#song1').fadeOut(200);
+                            $('#artist1').fadeOut(200);
+                            $('#song2').fadeIn(200);
+                            $('#artist2').fadeIn(200);
                             $( ".carouse-inner" ).animate({ "margin-left": "-=200px" },200);
                             $('#lisn').css("background",colors["yellow"]);
                             $('.carouse ').css("background","linear-gradient(transparent,#DA9C16)");
                             $('#msgboard').css("background",colors["yellow"]);
                             $('#msgboard').css("border-top","none");
-                            $('#imgright img').attr('src','images/homie_yellow.png');
-                            $('#imgright img').attr('width','170px');
-                            $('#imgleft img').attr('src','images/guy_yellow.png');
-                            $('#imgleft img').attr('width','170px');
-                            $('#imgleft').css("margin-left","-97px");
+                            // $('#imgright').fadeIn(1000);
+                            // $('#imgright img').attr('src','images/homie_yellow.png').fadeIn(1000);
+                            // $('#imgright img').attr('width','170px');
+                            // $('#imgleft img').attr('src','images/guy_yellow.png').fadeIn(1000);
+                            // $('#imgleft img').attr('width','170px');
+                            // $('#imgleft').css("margin-left","-97px");
                           }
                           else if (messageIndex==11){
+                            $('#song2').fadeOut(200);
+                            $('#artist2').fadeOut(200);
+                            $('#song3').fadeIn(200);
+                            $('#artist3').fadeIn(200);
                             $( ".carouse-inner" ).animate({ "margin-left": "-=200px" },200);
                             $('#lisn').css("background",colors["green"]);
 
                             $('.carouse').css("background","linear-gradient(transparent,#55BA69)");
                             $('#msgboard').css("background",colors["green"]);
                             $('#msgboard').css("border-top","none");
-                            $('#imgright img').attr('src','images/curly_green.png');
-                            $('#imgright img').attr('width','170px');
-                            $('#imgleft img').attr('src','images/guy_green.png');
-                            $('#imgleft img').attr('width','170px');
-                            $('#imgleft').css("margin-left","-97px");
+                            // $('#imgright').fadeIn(1000);
+                            // $('#imgright img').attr('src','images/curly_green.png').fadeIn(1000);
+                            // $('#imgright img').attr('width','170px');
+                            // $('#imgleft img').attr('src','images/guy_green.png').fadeIn(1000);
+                            // $('#imgleft img').attr('width','170px');
+                            // $('#imgleft').css("margin-left","-97px");
                           }
                           else if (messageIndex==14){
+                            $('#song3').fadeOut(200);
+                            $('#artist3').fadeOut(200);
+                            $('#song4').fadeIn(200);
+                            $('#artist4').fadeIn(200);
+
                             $( ".carouse-inner" ).animate({ "margin-left": "-=200px" },200);
                             $('#lisn').css("background",colors["red"]);
 
                             $('.carouse').css("background","linear-gradient(transparent,#FD636A)");
-                            $('#msgboard').css("background",colors["red"]);
-                            $('#msgboard').css("border-top","none");
-                            $('#imgright img').attr('src','images/lady_red.png');
-                            $('#imgright img').attr('width','168px');
-                            $('#imgleft img').attr('src','images/guy_red.png');
-                            $('#imgleft img').attr('width','170px');
-                            $('#imgleft').css("margin-left","-97px");
+                            // $('#msgboard').css("background",colors["red"]);
+                            // $('#msgboard').css("border-top","none");
+                            // $('#imgright').fadeIn(1000);
+                            // $('#imgright img').attr('src','images/lady_red.png').fadeIn(1000);
+                            // $('#imgright img').attr('width','168px');
+                            // $('#imgleft img').attr('src','images/guy_red.png').fadeIn(1000);
+                            // $('#imgleft img').attr('width','170px');
+                            // $('#imgleft').css("margin-left","-97px");
                           }
 
                           myLoop(messageIndex+1);
                         }
                         else if (messageIndex==16){
                           $('.message').animate({"top":"+=450px"},200);
+                          $('#song4').fadeOut(200);
+                          $('#artist4').fadeOut(200);
+                          $('#song1').fadeIn(200);
+                          $('#artist1').fadeIn(200);
                           $( ".carouse-inner" ).animate({ "margin-left": "+=600px" },200);
                           $('#lisn').css("background",colors["purple"]);
                           $('.carouse ').css("background","linear-gradient(transparent,#6967CE)");
                           $('#msgboard').css("background",colors["purple"]);
                           $('#msgboard').css("border-top","none");
-                          $('#imgright img').attr('src','images/ruff_purple.png');
-                          $('#imgright img').attr('width','170px');
-                          $('#imgleft img').attr('src','images/guy_purple.png');
-                          $('#imgleft img').attr('width','185px');
-                          $('#imgleft').css("margin-left","-112px");
+                          // $('#imgright img').attr('src','images/ruff_purple.png');
+                          // $('#imgright').fadeIn(1000);
+                          // $('#imgright img').attr('width','170px');
+                          // $('#imgleft img').attr('src','images/guy_purple.png').fadeIn(1000);
+                          // $('#imgleft img').attr('width','185px');
+                          // $('#imgleft').css("margin-left","-112px");
                         myLoop(5);
 
                         }
@@ -145,44 +166,50 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-4 col-sm-4 col-md-4 col-xs-0">
+          <div class="col-lg-4 col-sm-2 col-md-3 col-xs-2">
           </div>
 
-          <div class="col-lg-4 col-sm-4 col-md-4 col-xs-12">
-            <div id="img-contain">
-            <div id="imgleft">
-              <img src="images/guy_purple.png"  class="img-responsive" width="185px">
-            </div>
-
-            <div id="imgright">
-              <img src="images/ruff_purple.png" width="170px" >
-            </div>
-            </div>
+          <div class="col-lg-4 col-sm-8 col-md-6 col-xs-8">
               <div class="bg" id="iphone">
                 <center><img src="images/iphone@2x1.png" class="img-responsive" width="286px"></center>
               </div>
-              <div class="bg" id="dots"><img src="images/dots@2x.png" class="img-responsive" width="80px" ></div>
+              <div id="dots"><img src="images/dots@2x.png" class="img-responsive" width="80px" ></div>
               <!-- <div class="bg" id="mute"><input type="image" id="mute" value="pause" src="images/mute@2x.png" class="img-responsive" width="43px" height:"43px"/></div> -->
+              <div class="bg" id="img-contain">
+              <div id="imgleft">
+                <img src="images/guy_purple.png"  class="img-responsive" width="185px">
+              </div>
 
-
+              <div id="imgright">
+                <img src="images/ruff_purple.png" width="170px" >
+              </div>
+              </div>
               <div class="carouse">
-                <div class="song">Abyss<br style="line height:slight;"></div>
-                <div class="artist">Koan Soun</div>
-                <div class="carouse-inner">
-                  <div class="pic" style="margin-left:0px;" >
-                    <img src="http://i685.photobucket.com/albums/vv219/Metaltim/Feb%202011/image004-1.jpg"class="img-responsive" >
-                 </div>
+                <div class="song" id="song1">Warm on Cold Night<br style="line height:slight;"></div>
+                <div class="artist" id="artist1">Honne</div>
+                <div class="song" id="song2">CAMP<br style="line height:slight;"></div>
+                <div class="artist" id="artist2" >Childish Gambino</div>
+                <div class="song" id="song3">What Kind Of Man<br style="line height:slight;"></div>
+                <div class="artist" id="artist3">Nicholas Jaar</div>
+                <div class="song" id="song4">Step & Stagger<br style="line height:slight;"></div>
+                <div class="artist" id="artist4">Murlocs</div>
+              <div class="carouse-inner">
 
-                  <div class="pic" style="margin-left:0px;">
-                    <img src="https://upload.wikimedia.org/wikipedia/en/8/82/Soad_aerials_single.jpg" class="img-responsive">
+
+                  <div class="pic" style="margin-left:0px;" >
+                    <img src="images/art1.jpg"class="img-responsive" >
                   </div>
 
                   <div class="pic" style="margin-left:0px;">
-                    <img src="http://cdn.thedailybeast.com/content/dailybeast/galleries/2014/06/28/best-selling-album-covers-reimagined-bob-dylan-kanye-west-and-more/jcr:content/gallery/1bc34799-fd5e-4194-a409-5b95382b04bb/image.img.410.273.jpg/46797402.cached.jpg" clas="img-responsive">
+                    <img src="images/art2.jpg" class="img-responsive">
+                  </div>
+
+                  <div class="pic" style="margin-left:0px;">
+                    <img src="images/art3.jpg" clas="img-responsive">
                   </div>
 
                   <div class="pic" style="margin-left:0px;  ">
-                    <img src="http://static.wixstatic.com/media/5211d8_d0bae92862a14355b176b489109346af.jpg_srz_273_273_85_22_0.50_1.20_0.00_jpg_srz"class="img-responsive" >
+                    <img src="images/art4.jpg"class="img-responsive" >
                   </div>
                 </div>
 
@@ -232,18 +259,18 @@
 
             </div>
 
-          <div class="col-lg-4 col-sm-3 col-md-2 col-xs-0">
+          <div class="col-lg-4 col-sm-2 col-md-3 col-xs-2">
           </div>
         </div>
       </div>
       <div class="container-fluid">
         <div  class="row" id="foot1">
-          <div id="beta" class="col-lg-6 col-xs-12">
+          <div id="beta" class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
             <span> We’re currently in private beta.<br></span>
                       <span>Sign up to be notified about the launch!</span>
           </div>
 
-          <div id="beta-signup" class="col-lg-6 col-xs-12">
+          <div id="beta-signup" class="col-lg-6 col-md-6  col-sm-12 col-xs-12">
               <div id="inpt">  <input type="text" id="email" placeholder="EMAIL ADDRESS" >
             <button type="button" id="signup" class="btn btn-default">SIGN UP</button></div>
           </div>
