after some adjustments , its working now

--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
                             $('.carouse ').css("background","linear-gradient(transparent,#DA9C16)");
                             $('#msgboard').css("background",colors["yellow"]);
                             $('#msgboard').css("border-top","none");
-                            // $('#imgright').fadeIn(1000);
-                            // $('#imgright img').attr('src','images/homie_yellow.png').fadeIn(1000);
-                            // $('#imgright img').attr('width','170px');
-                            // $('#imgleft img').attr('src','images/guy_yellow.png').fadeIn(1000);
-                            // $('#imgleft img').attr('width','170px');
-                            // $('#imgleft').css("margin-left","-97px");
+                            $('#imgright').fadeIn(1000);
+                            $('#imgright img').attr('src','images/homie_yellow.png').fadeIn(1000);
+                            $('#imgright img').attr('width','170px');
+                            $('#imgleft img').attr('src','images/guy_yellow.png').fadeIn(1000);
+                            $('#imgleft img').attr('width','170px');
+                            $('#imgleft').css("margin-left","-97px");
                           }
                           else if (messageIndex==11){
                             $('#song2').fadeOut(200);
@@ -74,12 +74,12 @@
                             $('.carouse').css("background","linear-gradient(transparent,#55BA69)");
                             $('#msgboard').css("background",colors["green"]);
                             $('#msgboard').css("border-top","none");
-                            // $('#imgright').fadeIn(1000);
-                            // $('#imgright img').attr('src','images/curly_green.png').fadeIn(1000);
-                            // $('#imgright img').attr('width','170px');
-                            // $('#imgleft img').attr('src','images/guy_green.png').fadeIn(1000);
-                            // $('#imgleft img').attr('width','170px');
-                            // $('#imgleft').css("margin-left","-97px");
+                            $('#imgright').fadeIn(1000);
+                            $('#imgright img').attr('src','images/curly_green.png').fadeIn(1000);
+                            $('#imgright img').attr('width','170px');
+                            $('#imgleft img').attr('src','images/guy_green.png').fadeIn(1000);
+                            $('#imgleft img').attr('width','170px');
+                            $('#imgleft').css("margin-left","-97px");
                           }
                           else if (messageIndex==14){
                             $('#song3').fadeOut(200);
@@ -91,14 +91,14 @@
                             $('#lisn').css("background",colors["red"]);
 
                             $('.carouse').css("background","linear-gradient(transparent,#FD636A)");
-                            // $('#msgboard').css("background",colors["red"]);
-                            // $('#msgboard').css("border-top","none");
-                            // $('#imgright').fadeIn(1000);
-                            // $('#imgright img').attr('src','images/lady_red.png').fadeIn(1000);
-                            // $('#imgright img').attr('width','168px');
-                            // $('#imgleft img').attr('src','images/guy_red.png').fadeIn(1000);
-                            // $('#imgleft img').attr('width','170px');
-                            // $('#imgleft').css("margin-left","-97px");
+                            $('#msgboard').css("background",colors["red"]);
+                            $('#msgboard').css("border-top","none");
+                            $('#imgright').fadeIn(1000);
+                            $('#imgright img').attr('src','images/lady_red.png').fadeIn(1000);
+                            $('#imgright img').attr('width','168px');
+                            $('#imgleft img').attr('src','images/guy_red.png').fadeIn(1000);
+                            $('#imgleft img').attr('width','170px');
+                            $('#imgleft').css("margin-left","-97px");
                           }
 
                           myLoop(messageIndex+1);
@@ -114,12 +114,12 @@
                           $('.carouse ').css("background","linear-gradient(transparent,#6967CE)");
                           $('#msgboard').css("background",colors["purple"]);
                           $('#msgboard').css("border-top","none");
-                          // $('#imgright img').attr('src','images/ruff_purple.png');
-                          // $('#imgright').fadeIn(1000);
-                          // $('#imgright img').attr('width','170px');
-                          // $('#imgleft img').attr('src','images/guy_purple.png').fadeIn(1000);
-                          // $('#imgleft img').attr('width','185px');
-                          // $('#imgleft').css("margin-left","-112px");
+                          $('#imgright img').attr('src','images/ruff_purple.png');
+                          $('#imgright').fadeIn(1000);
+                          $('#imgright img').attr('width','170px');
+                          $('#imgleft img').attr('src','images/guy_purple.png').fadeIn(1000);
+                          $('#imgleft img').attr('width','185px');
+                          $('#imgleft').css("margin-left","-112px");
                         myLoop(5);
 
                         }
